--- a/html/index.html
+++ b/html/index.html
@@ -35,7 +35,7 @@
 						<a href="tel:4852733792">(4852) 73-37-92 </a>
 					</div>
 					<div class="header__contacts-link">
-						<a href="#callback" class="popup-with-move-anim">Обратный звонок</a>
+						<a href="#popup" class="popup-with-move-anim">Обратный звонок</a>
 					</div>
 				</div>
 				<nav class="header__menu">
@@ -45,7 +45,7 @@
 						<li><a href="#advantages" class="scroll">Преимущества</a></li>
 						<li><a href="#scheme" class="scroll">Схема работы</a></li>
 						<li><a href="#clients" class="scroll">Клиенты</a></li>
-						<li><a href="#contacts" class="scroll">Контакты</a></li>
+						<li><a href="#footer" class="scroll">Контакты</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -75,7 +75,7 @@
 		<div class="production__container container">
 			<div class="production__box">
 				<div class="production__content">
-					<div class="production__background" style="background-image: url(../img/bg-production1.jpg);"></div>
+					<div class="production__background" style="background-image: url(img/bg-production1.jpg);"></div>
 					<h2 class="production__title title">Базовые масла</h2>
 					<p class="production__text">Очищенные дистиллятные нефтяные масла с различной степенью вязкости. Используются в качестве смазочного материала для:</p>
 					<ul class="production__list">
@@ -145,7 +145,7 @@
 		<div class="production__container container">
 			<div class="production__box">
 				<div class="production__content">
-					<div class="production__background" style="background-image: url(../img/bg-production2.jpg);"></div>
+					<div class="production__background" style="background-image: url(img/bg-production2.jpg);"></div>
 					<h2 class="production__title title">Гидравли&shy;ческие масла</h2>
 					<p class="production__text">Сбалансированная композиция базовых масел с добавлением комплекса присадок. Рекомендованы при всесезонной эксплуатации оборудования, где требуются масла с минимальным изменением вязкости в зависимости от температуры. <br>Предназначены для использования в гидросистемах и приводах</p>
 					<ul class="production__list">
@@ -216,7 +216,7 @@
 		<div class="production__container container">
 			<div class="production__box">
 				<div class="production__content">
-					<div class="production__background" style="background-image: url(../img/bg-production3.jpg);"></div>
+					<div class="production__background" style="background-image: url(img/bg-production3.jpg);"></div>
 					<h2 class="production__title title">Моторные масла</h2>
 					<p class="production__text">Произведены из высококачественных базовых масел с добавлением комплекса присадок. Улучшенная формула состава продлевает срок службы, снижает расход масла на угар и обеспечивает высокую антикоррозионную защиту. Используется в качестве смазочного материала двигателей внутреннего сгорания</p>
 					<ul class="production__list">
@@ -286,7 +286,7 @@
 		<div class="production__container container">
 			<div class="production__box">
 				<div class="production__content">
-					<div class="production__background" style="background-image: url(../img/bg-production4.jpg);"></div>
+					<div class="production__background" style="background-image: url(img/bg-production4.jpg);"></div>
 					<h2 class="production__title title">Энергети&shy;ческие масла</h2>
 					<p class="production__text">Состоят из высококачественного базового масла с добавлением специального комплекса присадок. <br>Используется для смазывания:</p>
 					<ul class="production__list">
@@ -366,9 +366,9 @@
 				</div>
 				<form class="information__form">
 					<h3 class="information__form-title">Получите полный каталог продукции <br>с ценами</h3>
-					<input type="text" class="information__form-input" placeholder="Ваше имя">
-					<input type="text" class="information__form-input" placeholder="Ваш e-mail">
-					<input type="text" class="information__form-input" placeholder="Ваш телефон">
+					<input type="text" class="information__form-input" placeholder="Ваше имя" required>
+					<input type="text" class="information__form-input" placeholder="Ваш e-mail" required>
+					<input type="text" class="information__form-input" placeholder="Ваш телефон" required>
 					<button class="information__form-submit" type="submit">Отправить</button>
 				</form>
 			</div>
@@ -403,37 +403,37 @@
 		</div>
 	</section>
 
-	<section class="selection">
-		<div class="selection__container container">
-			<h2 class="selection__title title">Почему выбирают именно нас?</h2>
-			<ul class="selection__box">
-				<li class="selection__item">
-					<fugure class="selection__item-icon">
-						<i class="icon-selection1"></i>
-					</fugure>
-					<h3 class="selection__item-title">Высокое качество  <br>продукции</h3>
-					<p class="selection__item-text">Наши масла не включаютв себя отработанные компоненты и производятся в строгом соответствии с ГОСТами</p>
+	<section id="advantages" class="advantages">
+		<div class="advantages__container container">
+			<h2 class="advantages__title title">Почему выбирают именно нас?</h2>
+			<ul class="advantages__box">
+				<li class="advantages__item">
+					<figure class="advantages__item-icon">
+						<i class="icon-advantages1"></i>
+					</figure>
+					<h3 class="advantages__item-title">Высокое качество  <br>продукции</h3>
+					<p class="advantages__item-text">Наши масла не включаютв себя отработанные компоненты и производятся в строгом соответствии с ГОСТами</p>
 				</li>
-				<li class="selection__item">
-					<fugure class="selection__item-icon">
-						<i class="icon-selection2"></i>
-					</fugure>
-					<h3 class="selection__item-title">Цены <br>от производителя</h3>
-					<p class="selection__item-text">Мы закупаем сырьё напрямую у партнеров, а конечную продукцию реализуем без посредников, что гарантирует вам лучшую цену</p>
+				<li class="advantages__item">
+					<figure class="advantages__item-icon">
+						<i class="icon-advantages2"></i>
+					</figure>
+					<h3 class="advantages__item-title">Цены <br>от производителя</h3>
+					<p class="advantages__item-text">Мы закупаем сырьё напрямую у партнеров, а конечную продукцию реализуем без посредников, что гарантирует вам лучшую цену</p>
 				</li>
-				<li class="selection__item">
-					<fugure class="selection__item-icon">
-						<i class="icon-selection3"></i>
-					</fugure>
-					<h3 class="selection__item-title">Различная <br>фасовка</h3>
-					<p class="selection__item-text">Для вашего удобства, мы разливаем масла в бочки и канистры разного объема (в том числе евроформата)</p>
+				<li class="advantages__item">
+					<figure class="advantages__item-icon">
+						<i class="icon-advantages3"></i>
+					</figure>
+					<h3 class="advantages__item-title">Различная <br>фасовка</h3>
+					<p class="advantages__item-text">Для вашего удобства, мы разливаем масла в бочки и канистры разного объема (в том числе евроформата)</p>
 				</li>
-				<li class="selection__item">
-					<fugure class="selection__item-icon">
-						<i class="icon-selection4"></i>
-					</fugure>
-					<h3 class="selection__item-title">Доставка масел <br>по всей России</h3>
-					<p class="selection__item-text">Мы доставляем нашу продукцию по всей стране любыми видами т ранспорта от 1 до 5 дней с момента оплаты заказа</p>
+				<li class="advantages__item">
+					<figure class="advantages__item-icon">
+						<i class="icon-advantages4"></i>
+					</figure>
+					<h3 class="advantages__item-title">Доставка масел <br>по всей России</h3>
+					<p class="advantages__item-text">Мы доставляем нашу продукцию по всей стране любыми видами т ранспорта от 1 до 5 дней с момента оплаты заказа</p>
 				</li>
 			</ul>
 		</div>
@@ -444,7 +444,7 @@
 			<h2 class="consult__title title">Работайте с профессионалами своего дела</h2>
 			<p class="consult__text">Закажите бесплатную консультацию нашего технолога</p>
 			<div class="consult__button">
-				<a href="#" class="button">Связаться с нами!</a>
+				<a href="#popup" class="popup-with-move-anim button">Связаться с нами!</a>
 			</div>
 		</div>
 	</section>
@@ -469,7 +469,7 @@
 				<h3 class="callback__undertitle">Не хотите оформлять заказ на сайте?</h3>
 				<p class="callback__text">Оставьте свои контакты: мы перезвоним вам в течение 15 минут <br>и поможем выбрать качественные масла по разумной цене!</p>
 				<div class="callback__button">
-					<a href="#" class="button">Заказать звонок</a>
+					<a href="#popup" class="popup-with-move-anim button">Заказать звонок</a>
 				</div>
 			</div>
 		</div>
@@ -530,8 +530,36 @@
 		</div>
 	</section>
 
+	<footer id="footer" class="footer">
+		<div id="map" class="footer__map"></div>
+		<div class="footer__container container">
+			<div class="footer__box">
+				<h2 class="footer__title title">Наши контакты</h2>
+				<ul class="footer__list">
+					<li><address>Адрес: г. Ярославль, ул. 2-я Транспортная, дом 1</address></li>
+					<li>Телефоны: <a href="tel:84852733792">8 (4852) 73-37-92</a>, <a href="tel:26-03-66">26-03-66</a>, <a href="tel:26-03-67">26-03-67</a></li>
+					<li><a href="mailto:info@yarsmazki.ru">E-mail: info@yarsmazki.ru</a></li>
+				</ul>
+				<div class="footer__button">
+					<a href="#popup" class="popup-with-move-anim button">Заказать звонок</a>
+				</div>
+				<p class="footer__copy">ООО «Ярославские смазки»</p>
+			</div>
+		</div>
+	</footer>
+
+	<div class="hidden">
+		<form id="popup" class="popup zoom-anim-dialog">
+			<h3 class="popup__title">Отправьте заявку  <br>и мы свяжемся с вами</h3>
+			<input type="text" class="popup__input" placeholder="Ваше имя" required>
+			<input type="text" class="popup__input" placeholder="Ваш e-mail" required>
+			<input type="text" class="popup__input" placeholder="Ваш телефон" required>
+			<button class="popup__submit" type="submit">Отправить</button>
+		</form>
+	</div>
 
 	<!-- Load Scripts Start -->
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKPEtr5nPtb8DKYXSDwdvz3xNLSDtGd70&amp;amp;sensor=false" defer></script>
 	<script src="js/libs.js" defer></script>
 	<script src="js/common.js" defer></script>
 	<!-- Load Scripts End -->
